[gd_scene load_steps=20 format=2]

[ext_resource path="res://tileset/tilemap_grassy_lands_decor.tres" type="TileSet" id=1]
[ext_resource path="res://tileset/tilemap_grassy_lands.tres" type="TileSet" id=2]
[ext_resource path="res://objects/obj_campfire.tscn" type="PackedScene" id=3]
[ext_resource path="res://tileset/scripts/set_camera_limit.gd" type="Script" id=4]
[ext_resource path="res://entities/entity_mc/entity_mc.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/sprsheet_patients.png" type="Texture" id=6]
[ext_resource path="res://sprites/spr_mc/spr_concerned.png" type="Texture" id=7]
[ext_resource path="res://maps/chapter3/scripts/chapter3-1.gd" type="Script" id=8]
[ext_resource path="res://effects/lighting/radial_lighting.png" type="Texture" id=9]
[ext_resource path="res://maps/chapter3/scripts/npc_patient3.gd" type="Script" id=10]
[ext_resource path="res://dialogue/dialogue_system.tscn" type="PackedScene" id=11]
[ext_resource path="res://dialogue/dialogue_holder.tscn" type="PackedScene" id=12]
[ext_resource path="res://sprites/spr_mc/spr_neutral.png" type="Texture" id=13]
[ext_resource path="res://sprites/spr_mc/spr_happy.png" type="Texture" id=14]
[ext_resource path="res://sprites/spr_patient3/spr_angry.png" type="Texture" id=15]
[ext_resource path="res://sprites/spr_patient3/spr_happy.png" type="Texture" id=16]
[ext_resource path="res://sprites/spr_patient3/spr_neutral.png" type="Texture" id=17]
[ext_resource path="res://sprites/spr_patient3/spr_eyeshut.png" type="Texture" id=18]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[node name="chapter3-1" type="Node2D"]
script = ExtResource( 8 )

[node name="tilemap_grassy_lands" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 4, 0, 1, 2, 131073, 2, 2, 131073, 3, 2, 131073, 4, 2, 131073, 5, 2, 131073, 6, 2, 131073, 7, 2, 131073, 8, 2, 131073, 9, 2, 131073, 10, 2, 131073, 11, 2, 131073, 12, 2, 131073, 13, 2, 131073, 14, 2, 131073, 15, 2, 131073, 16, 2, 131073, 17, 2, 131073, 18, 2, 131073, 19, 2, 131073, 20, 2, 131073, 21, 2, 131073, 22, 2, 131073, 23, 2, 131073, 24, 2, 131073, 25, 2, 131073, 26, 0, 65537, 27, 0, 65537, 28, 0, 65537, 29, 0, 65537, 30, 0, 65537, 31, 0, 65537, 32, 0, 65537, 33, 0, 65537, 34, 0, 65537, 35, 0, 65537, 65536, 2, 65538, 65537, 0, 0, 65538, 0, 1, 65539, 0, 1, 65540, 0, 1, 65541, 0, 1, 65542, 0, 1, 65543, 0, 1, 65544, 0, 1, 65545, 0, 1, 65546, 0, 1, 65547, 0, 1, 65548, 0, 1, 65549, 0, 1, 65550, 0, 1, 65551, 0, 1, 65552, 0, 1, 65553, 0, 1, 65554, 0, 1, 65555, 0, 1, 65556, 0, 1, 65557, 0, 1, 65558, 0, 1, 65559, 0, 1, 65560, 0, 1, 65561, 0, 2, 65562, 2, 65536, 65563, 0, 65537, 65564, 0, 65537, 65565, 13, 0, 65568, 13, 0, 65571, 0, 65537, 131072, 2, 65538, 131073, 0, 65536, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 13, 0, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65537, 131087, 0, 65537, 131088, 0, 65537, 131089, 0, 65537, 131090, 0, 65537, 131091, 0, 65537, 131092, 0, 65537, 131093, 0, 65537, 131094, 0, 65537, 131095, 0, 65537, 131096, 0, 65537, 131097, 0, 65538, 131098, 2, 65536, 131099, 0, 65537, 131100, 0, 65537, 131101, 0, 65537, 131102, 0, 65537, 131103, 0, 65537, 131104, 0, 65537, 131105, 0, 65537, 131106, 0, 65537, 131107, 0, 65537, 196608, 2, 65538, 196609, 0, 65536, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 13, 0, 196623, 0, 65537, 196624, 0, 65537, 196625, 13, 0, 196628, 0, 65537, 196629, 0, 65537, 196630, 13, 0, 196633, 0, 65538, 196634, 2, 131072, 196635, 2, 131073, 196636, 2, 131073, 196637, 2, 131073, 196638, 2, 131073, 196639, 0, 65537, 196640, 0, 65537, 196641, 0, 65537, 196642, 0, 65537, 196643, 0, 65537, 262144, 2, 65538, 262145, 0, 65536, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65537, 262158, 13, 0, 262161, 0, 65537, 262162, 0, 65537, 262163, 0, 65537, 262164, 0, 65537, 262165, 0, 65537, 262166, 0, 65537, 262167, 0, 65537, 262168, 0, 65537, 262169, 0, 65537, 262170, 0, 1, 262171, 0, 1, 262172, 0, 1, 262173, 0, 1, 262174, 0, 2, 262175, 2, 131072, 262176, 0, 65537, 262177, 13, 0, 327680, 2, 65538, 327681, 0, 65536, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 13, 0, 327693, 0, 65537, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 13, 0, 327701, 0, 65537, 327702, 0, 65537, 327703, 0, 65537, 327704, 0, 65537, 327705, 0, 65537, 327706, 0, 65537, 327707, 0, 65537, 327708, 0, 65537, 327709, 0, 65537, 327710, 0, 65537, 327711, 0, 2, 327712, 2, 65536, 327713, 0, 65537, 327714, 0, 65537, 327715, 0, 65537, 393216, 2, 65538, 393217, 0, 65536, 393218, 3, 65537, 393219, 3, 65537, 393220, 14, 131073, 393221, 14, 131073, 393222, 0, 65537, 393223, 0, 65537, 393224, 13, 0, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65537, 393231, 0, 65537, 393232, 13, 0, 393235, 0, 65537, 393236, 13, 0, 393239, 0, 65537, 393240, 0, 65537, 393241, 0, 65537, 393242, 0, 65537, 393243, 0, 65537, 393244, 0, 65537, 393245, 0, 65537, 393246, 0, 65537, 393247, 0, 65538, 393248, 2, 65536, 393249, 0, 65537, 393250, 0, 65537, 393251, 0, 65537, 458752, 2, 65538, 458753, 0, 65536, 458754, 0, 65537, 458755, 14, 65538, 458756, 5, 393216, 458757, 5, 393218, 458758, 14, 131072, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537, 458765, 13, 0, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65537, 458771, 0, 65537, 458772, 0, 65537, 458773, 0, 65537, 458774, 0, 65537, 458775, 0, 65537, 458776, 0, 65537, 458777, 0, 65537, 458778, 0, 65537, 458779, 0, 65537, 458780, 13, 0, 458783, 0, 65538, 458784, 2, 65536, 458785, 0, 65537, 458786, 0, 65537, 458787, 0, 65537, 524288, 2, 65538, 524289, 0, 65536, 524290, 3, 65537, 524291, 14, 65538, 524292, 5, 524288, 524293, 5, 65537, 524294, 5, 393218, 524295, 14, 131072, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 65537, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 65537, 524305, 0, 65537, 524306, 0, 65537, 524307, 0, 65537, 524308, 0, 65537, 524309, 0, 65537, 524310, 0, 65537, 524311, 0, 65537, 524312, 0, 65537, 524313, 0, 65537, 524314, 0, 65537, 524315, 0, 65537, 524316, 0, 65537, 524317, 0, 65537, 524318, 0, 65537, 524319, 0, 65538, 524320, 2, 65536, 524321, 13, 0, 589824, 2, 65538, 589825, 0, 65536, 589826, 3, 65537, 589827, 3, 65537, 589828, 14, 2, 589829, 5, 524288, 589830, 5, 65537, 589831, 5, 393218, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537, 589839, 13, 0, 589842, 0, 65537, 589843, 0, 65537, 589844, 0, 65537, 589845, 0, 65537, 589846, 0, 65537, 589847, 0, 65537, 589848, 13, 0, 589851, 0, 65537, 589852, 0, 65537, 589853, 0, 65537, 589854, 0, 65537, 589855, 0, 65538, 589856, 2, 131072, 589857, 0, 65537, 589858, 0, 65537, 589859, 0, 65537, 655360, 2, 65538, 655361, 0, 65536, 655362, 3, 65537, 655363, 3, 65537, 655364, 3, 65537, 655365, 14, 65538, 655366, 5, 65536, 655367, 5, 458754, 655368, 14, 131072, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 65537, 655377, 0, 65537, 655378, 0, 65537, 655379, 0, 65537, 655380, 0, 65537, 655381, 0, 65537, 655382, 0, 65537, 655383, 0, 65537, 655384, 0, 65537, 655385, 0, 65537, 655386, 0, 65537, 655387, 0, 65537, 655388, 0, 65537, 655389, 0, 65537, 655390, 0, 65537, 655391, 0, 65537, 655392, 0, 2, 655393, 2, 65536, 655394, 0, 65537, 655395, 0, 65537, 720896, 2, 65538, 720897, 0, 65536, 720898, 0, 65537, 720899, 3, 65537, 720900, 0, 65537, 720901, 14, 65538, 720902, 5, 524288, 720903, 5, 65537, 720904, 5, 393218, 720905, 14, 131072, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 13, 0, 720918, 0, 65537, 720919, 13, 0, 720922, 0, 65537, 720923, 13, 0, 720926, 0, 65537, 720927, 0, 65537, 720928, 0, 65538, 720929, 2, 65536, 720930, 0, 65537, 720931, 0, 65537, 786432, 2, 65538, 786433, 0, 65536, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 14, 2, 786439, 5, 524288, 786440, 5, 65537, 786441, 5, 393218, 786442, 14, 131072, 786443, 0, 65537, 786444, 0, 65537, 786445, 1, 65537, 786446, 0, 65537, 786447, 1, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 65537, 786453, 13, 0, 786456, 0, 65537, 786457, 0, 65537, 786458, 0, 65537, 786459, 0, 65537, 786460, 0, 65537, 786461, 13, 0, 786464, 0, 65538, 786465, 2, 65536, 786466, 0, 65537, 786467, 0, 65537, 851968, 2, 65538, 851969, 0, 131072, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 14, 2, 851976, 5, 524288, 851977, 5, 65537, 851978, 5, 393218, 851979, 14, 131072, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 1, 65537, 851984, 0, 65537, 851985, 0, 65537, 851986, 13, 0, 851989, 0, 65537, 851990, 0, 65537, 851991, 0, 65537, 851992, 0, 65537, 851993, 13, 0, 851996, 0, 65537, 851997, 0, 65537, 851998, 0, 65537, 851999, 0, 65537, 852000, 0, 65538, 852001, 2, 65536, 852002, 0, 65537, 852003, 0, 65537, 917504, 0, 65537, 917505, 2, 2, 917506, 0, 65536, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65537, 917511, 0, 65537, 917512, 14, 2, 917513, 5, 524288, 917514, 5, 65537, 917515, 5, 393218, 917516, 0, 65537, 917517, 1, 65537, 917518, 0, 65537, 917519, 0, 65537, 917520, 0, 65537, 917521, 0, 65537, 917522, 0, 65537, 917523, 0, 65537, 917524, 0, 65537, 917525, 0, 65537, 917526, 0, 65537, 917527, 0, 65537, 917528, 0, 65537, 917529, 0, 65537, 917530, 0, 65537, 917531, 0, 65537, 917532, 0, 65537, 917533, 0, 65537, 917534, 0, 65537, 917535, 0, 65537, 917536, 0, 65538, 917537, 2, 65536, 917538, 0, 65537, 917539, 0, 65537, 983040, 0, 65537, 983041, 2, 65538, 983042, 0, 65536, 983043, 0, 65537, 983044, 0, 65537, 983045, 0, 65537, 983046, 1, 65537, 983047, 0, 65537, 983048, 0, 65537, 983049, 14, 2, 983050, 5, 65536, 983051, 5, 458754, 983052, 14, 131072, 983053, 0, 65537, 983054, 0, 65537, 983055, 0, 65537, 983056, 0, 65537, 983057, 0, 65537, 983058, 0, 65537, 983059, 0, 65537, 983060, 0, 65537, 983061, 0, 65537, 983062, 13, 0, 983065, 0, 65537, 983066, 0, 65537, 983067, 0, 65537, 983068, 0, 65537, 983069, 0, 65537, 983070, 0, 65537, 983071, 0, 65537, 983072, 0, 65538, 983073, 2, 131072, 983074, 0, 65537, 983075, 0, 65537, 1048576, 0, 65537, 1048577, 2, 65538, 1048578, 0, 131072, 1048579, 0, 65537, 1048580, 0, 65537, 1048581, 0, 65537, 1048582, 0, 65537, 1048583, 0, 65537, 1048584, 0, 65537, 1048585, 14, 65538, 1048586, 5, 524288, 1048587, 5, 65537, 1048588, 5, 393218, 1048589, 14, 131072, 1048590, 0, 65537, 1048591, 0, 65537, 1048592, 0, 65537, 1048593, 1, 65537, 1048594, 0, 65537, 1048595, 0, 65537, 1048596, 13, 0, 1048599, 0, 65537, 1048600, 0, 65537, 1048601, 13, 0, 1048604, 0, 65537, 1048605, 13, 0, 1048608, 0, 65537, 1048609, 0, 2, 1048610, 2, 65536, 1048611, 0, 65537, 1114112, 0, 65537, 1114113, 0, 65537, 1114114, 2, 2, 1114115, 0, 65536, 1114116, 0, 65537, 1114117, 0, 65537, 1114118, 0, 65537, 1114119, 0, 65537, 1114120, 0, 65537, 1114121, 0, 65537, 1114122, 14, 2, 1114123, 5, 524288, 1114124, 5, 65537, 1114125, 5, 393218, 1114126, 14, 131072, 1114127, 0, 65537, 1114128, 0, 65537, 1114129, 0, 65537, 1114130, 0, 65537, 1114131, 0, 65537, 1114132, 0, 65537, 1114133, 0, 65537, 1114134, 0, 65537, 1114135, 0, 65537, 1114136, 0, 65537, 1114137, 0, 65537, 1114138, 0, 65537, 1114139, 0, 65537, 1114140, 0, 65537, 1114141, 0, 65537, 1114142, 0, 65537, 1114143, 0, 65537, 1114144, 0, 65537, 1114145, 0, 65538, 1114146, 2, 65536, 1114147, 0, 65537, 1179648, 0, 65537, 1179649, 0, 65537, 1179650, 2, 65538, 1179651, 0, 131072, 1179652, 0, 65537, 1179653, 0, 65537, 1179654, 0, 65537, 1179655, 0, 65537, 1179656, 0, 65537, 1179657, 0, 65537, 1179658, 0, 65537, 1179659, 14, 2, 1179660, 5, 524288, 1179661, 5, 65537, 1179662, 5, 393218, 1179663, 0, 65537, 1179664, 0, 65537, 1179665, 0, 65537, 1179666, 0, 65537, 1179667, 0, 65537, 1179668, 0, 65537, 1179669, 0, 65537, 1179670, 0, 65537, 1179671, 0, 65537, 1179672, 0, 65537, 1179673, 13, 0, 1179676, 0, 65537, 1179677, 0, 65537, 1179678, 0, 65537, 1179679, 0, 65537, 1179680, 0, 65537, 1179681, 0, 65538, 1179682, 2, 65536, 1179683, 0, 65537, 1245184, 0, 65537, 1245185, 0, 65537, 1245186, 0, 65537, 1245187, 2, 2, 1245188, 0, 65536, 1245189, 0, 65537, 1245190, 0, 65537, 1245191, 0, 65537, 1245192, 0, 65537, 1245193, 0, 65537, 1245194, 0, 65537, 1245195, 0, 65537, 1245196, 14, 2, 1245197, 5, 65536, 1245198, 5, 458754, 1245199, 1, 65537, 1245200, 0, 65537, 1245201, 0, 65537, 1245202, 0, 65537, 1245203, 0, 65537, 1245204, 0, 65537, 1245205, 0, 65537, 1245206, 0, 65537, 1245207, 0, 65537, 1245208, 0, 65537, 1245209, 0, 65537, 1245210, 0, 65537, 1245211, 0, 65537, 1245212, 0, 65537, 1245213, 13, 0, 1245216, 0, 65537, 1245217, 0, 65538, 1245218, 2, 65536, 1245219, 0, 65537, 1310720, 0, 65537, 1310721, 0, 65537, 1310722, 0, 65537, 1310723, 2, 65538, 1310724, 0, 65536, 1310725, 0, 65537, 1310726, 0, 65537, 1310727, 0, 65537, 1310728, 0, 65537, 1310729, 0, 65537, 1310730, 0, 65537, 1310731, 0, 65537, 1310732, 14, 65538, 1310733, 5, 65536, 1310734, 5, 458754, 1310735, 0, 65537, 1310736, 0, 65537, 1310737, 0, 65537, 1310738, 0, 65537, 1310739, 0, 65537, 1310740, 0, 65537, 1310741, 0, 65537, 1310742, 13, 0, 1310745, 0, 65537, 1310746, 13, 0, 1310749, 0, 65537, 1310750, 0, 65537, 1310751, 0, 65537, 1310752, 0, 65537, 1310753, 0, 65538, 1310754, 2, 65536, 1310755, 0, 65537, 1376256, 0, 65537, 1376257, 0, 65537, 1376258, 0, 65537, 1376259, 2, 65538, 1376260, 0, 65536, 1376261, 0, 65537, 1376262, 0, 65537, 1376263, 0, 65537, 1376264, 0, 65537, 1376265, 0, 65537, 1376266, 0, 65537, 1376267, 0, 65537, 1376268, 14, 65538, 1376269, 5, 65536, 1376270, 5, 458754, 1376271, 14, 131072, 1376272, 0, 65537, 1376273, 0, 65537, 1376274, 0, 65537, 1376275, 3, 65537, 1376276, 3, 65537, 1376277, 0, 65537, 1376278, 0, 65537, 1376279, 0, 65537, 1376280, 0, 65537, 1376281, 0, 65537, 1376282, 0, 65537, 1376283, 0, 65537, 1376284, 0, 65537, 1376285, 0, 65537, 1376286, 0, 65537, 1376287, 0, 65537, 1376288, 0, 65537, 1376289, 0, 131074, 1376290, 2, 65536, 1376291, 0, 65537, 1441792, 0, 65537, 1441793, 0, 65537, 1441794, 0, 65537, 1441795, 2, 65538, 1441796, 0, 131072, 1441797, 0, 65537, 1441798, 1, 65537, 1441799, 0, 65537, 1441800, 0, 65537, 1441801, 0, 65537, 1441802, 0, 65537, 1441803, 0, 65537, 1441804, 14, 65538, 1441805, 5, 524288, 1441806, 5, 65537, 1441807, 5, 393218, 1441808, 0, 65537, 1441809, 0, 65537, 1441810, 3, 65537, 1441811, 3, 65537, 1441812, 3, 65537, 1441813, 3, 65537, 1441814, 0, 65537, 1441815, 0, 65537, 1441816, 13, 0, 1441819, 0, 65537, 1441820, 0, 65537, 1441821, 0, 131073, 1441822, 0, 131073, 1441823, 0, 131073, 1441824, 0, 131074, 1441825, 2, 0, 1441826, 0, 65537, 1441827, 0, 65537, 1507328, 0, 65537, 1507329, 0, 65537, 1507330, 0, 65537, 1507331, 0, 65537, 1507332, 2, 2, 1507333, 0, 65536, 1507334, 0, 65537, 1507335, 0, 65537, 1507336, 0, 65537, 1507337, 0, 65537, 1507338, 0, 65537, 1507339, 0, 65537, 1507340, 0, 65537, 1507341, 14, 2, 1507342, 5, 65536, 1507343, 5, 65538, 1507344, 0, 65537, 1507345, 0, 65537, 1507346, 3, 65537, 1507347, 3, 65537, 1507348, 3, 65537, 1507349, 3, 65537, 1507350, 3, 65537, 1507351, 0, 65537, 1507352, 0, 65537, 1507353, 0, 65537, 1507354, 0, 65537, 1507355, 0, 65537, 1507356, 0, 65538, 1507357, 2, 0, 1507358, 2, 1, 1507359, 2, 1, 1507360, 2, 1, 1507361, 0, 65537, 1507362, 0, 65537, 1507363, 0, 65537, 1572864, 0, 65537, 1572865, 0, 65537, 1572866, 0, 65537, 1572867, 0, 65537, 1572868, 2, 65538, 1572869, 0, 65536, 1572870, 0, 65537, 1572871, 0, 65537, 1572872, 0, 65537, 1572873, 0, 65537, 1572874, 0, 65537, 1572875, 0, 65537, 1572876, 0, 65537, 1572877, 14, 65538, 1572878, 5, 65536, 1572879, 5, 65538, 1572880, 0, 65537, 1572881, 0, 65537, 1572882, 0, 65537, 1572883, 0, 65537, 1572884, 3, 65537, 1572885, 3, 65537, 1572886, 0, 65537, 1572887, 0, 65537, 1572888, 0, 65537, 1572889, 0, 65537, 1572890, 0, 65537, 1572891, 0, 65537, 1572892, 0, 65538, 1572893, 2, 65536, 1572894, 0, 65537, 1572895, 0, 65537, 1572896, 0, 65537, 1572897, 0, 65537, 1572898, 0, 65537, 1572899, 0, 65537, 1638400, 0, 65537, 1638401, 0, 65537, 1638402, 0, 65537, 1638403, 0, 65537, 1638404, 2, 65538, 1638405, 0, 65536, 1638406, 0, 65537, 1638407, 0, 65537, 1638408, 0, 65537, 1638409, 0, 65537, 1638410, 0, 65537, 1638411, 0, 65537, 1638412, 0, 65537, 1638413, 14, 65538, 1638414, 5, 65536, 1638415, 5, 65538, 1638416, 0, 65537, 1638417, 0, 65537, 1638418, 0, 65537, 1638419, 0, 65537, 1638420, 0, 65537, 1638421, 0, 65537, 1638422, 0, 65537, 1638423, 0, 65537, 1638424, 0, 65537, 1638425, 0, 65537, 1638426, 0, 65537, 1638427, 0, 65537, 1638428, 0, 131074, 1638429, 2, 65536, 1638430, 0, 65537, 1638431, 0, 65537, 1638432, 0, 65537, 1638433, 0, 65537, 1638434, 0, 65537, 1638435, 0, 65537, 1703936, 0, 65537, 1703937, 0, 65537, 1703938, 0, 65537, 1703939, 0, 65537, 1703940, 2, 65538, 1703941, 0, 131072, 1703942, 0, 131073, 1703943, 0, 131073, 1703944, 0, 131073, 1703945, 0, 131073, 1703946, 0, 131073, 1703947, 0, 131073, 1703948, 0, 131073, 1703949, 0, 131074, 1703950, 5, 65536, 1703951, 5, 65538, 1703952, 0, 131072, 1703953, 0, 131073, 1703954, 0, 131073, 1703955, 0, 131073, 1703956, 0, 131073, 1703957, 0, 131073, 1703958, 0, 131073, 1703959, 0, 131073, 1703960, 0, 131073, 1703961, 0, 131073, 1703962, 0, 131073, 1703963, 0, 131074, 1703964, 2, 0, 1703965, 0, 65537, 1703966, 0, 65537, 1703967, 0, 65537, 1703968, 0, 65537, 1703969, 0, 65537, 1703970, 0, 65537, 1703971, 0, 65537, 1769472, 0, 65537, 1769473, 0, 65537, 1769474, 0, 65537, 1769475, 0, 65537, 1769476, 0, 65537, 1769477, 2, 1, 1769478, 2, 1, 1769479, 2, 1, 1769480, 2, 1, 1769481, 2, 1, 1769482, 2, 1, 1769483, 2, 1, 1769484, 2, 1, 1769485, 2, 1, 1769486, 5, 65536, 1769487, 5, 65538, 1769488, 2, 1, 1769489, 2, 1, 1769490, 2, 1, 1769491, 2, 1, 1769492, 2, 1, 1769493, 2, 1, 1769494, 2, 1, 1769495, 2, 1, 1769496, 2, 1, 1769497, 2, 1, 1769498, 2, 1, 1769499, 2, 1, 1769500, 0, 65537, 1769501, 0, 65537, 1769502, 0, 65537, 1769503, 0, 65537, 1769504, 0, 65537, 1769505, 0, 65537, 1769506, 0, 65537, 1769507, 0, 65537 )
script = ExtResource( 4 )

[node name="tilemap_grassy_lands_decor" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65565, 0, 0, 65568, 0, 0, 131081, 0, 0, 196620, 0, 0, 196625, 0, 0, 196630, 0, 0, 262158, 0, 0, 262177, 0, 0, 327682, 2, 0, 327690, 0, 0, 327698, 0, 0, 393224, 0, 0, 393232, 0, 0, 393236, 0, 0, 458765, 0, 0, 458775, 0, 0, 458780, 0, 0, 524321, 0, 0, 589839, 0, 0, 589843, 0, 0, 589848, 0, 0, 720915, 0, 0, 720919, 0, 0, 720923, 0, 0, 786453, 0, 0, 786461, 0, 0, 851986, 0, 0, 851993, 0, 0, 983062, 0, 0, 1048596, 0, 0, 1048601, 0, 0, 1048605, 0, 0, 1179673, 0, 0, 1245213, 0, 0, 1310742, 0, 0, 1310746, 0, 0, 1441816, 0, 0 )

[node name="obj_campfire" parent="tilemap_grassy_lands_decor" instance=ExtResource( 3 )]
position = Vector2( 72, 88 )
level_path = "res://maps/chapter3/chapter3-1.tscn"
next_level_path = "res://maps/chapter3/chapter3-end.tscn"

[node name="entity_mc" parent="tilemap_grassy_lands_decor" instance=ExtResource( 5 )]
position = Vector2( 72, 72 )

[node name="light_torch" type="Light2D" parent="tilemap_grassy_lands_decor/entity_mc"]
position = Vector2( 0, -8 )
scale = Vector2( 0.446667, 0.446667 )
texture = ExtResource( 9 )
color = Color( 0.8, 0.831373, 0.411765, 1 )

[node name="npc_patient3" type="Area2D" parent="tilemap_grassy_lands_decor"]
position = Vector2( 344, 296 )
collision_layer = 0
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}
dialogue_transition = "res://maps/chapter3/chapter3-nycto_dungeon.tscn"
appear_location = Vector2( 160, 528 )

[node name="col_patient3" type="CollisionShape2D" parent="tilemap_grassy_lands_decor/npc_patient3"]
shape = SubResource( 1 )

[node name="spr_patient3" type="Sprite" parent="tilemap_grassy_lands_decor/npc_patient3"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="dialogue_system" parent="tilemap_grassy_lands_decor/npc_patient3" instance=ExtResource( 11 )]

[node name="nokey-0" parent="tilemap_grassy_lands_decor/npc_patient3/dialogue_system" instance=ExtResource( 12 )]
dialogue_lines = [ [ "MENJAUH DARI SINI", "Hey, hey. Tenang", "MEREKA DI MANA-MANA, BERSEMBUNYI DI KEGELAPAN", "Apa kamu takut sama gelap?", "SIAPA KAMU", "Aku psikolog. Ikuti aku, lebih cerah dekat tendaku" ], [ "STAY AWAY FROM ME!", "Hey, hey. Calm down", "THEY'RE EVERYWHERE, HIDING IN THE DARK", "Are you afraid of the dark?", "WHO ARE YOU", "I'm a psychologist. Come with me, it's brighter in my camp" ] ]
dialogue_picture_resource = [ ExtResource( 15 ), ExtResource( 7 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 14 ) ]
dialogue_command = "transition"

[node name="nokey-1" parent="tilemap_grassy_lands_decor/npc_patient3/dialogue_system" instance=ExtResource( 12 )]
dialogue_lines = [ [ "Terima kasih, maaf barusan", "Gapapa, apa yang terjadi padamu?", "Aku seharusnya mengumpulkan kayu bakar tapi aku tersesat dan terjebak di hutan ini", "Apa kamu takut sama gelap?", "Iya", "Coba santaikan pernapasanmu, itu akan membantu menenangkanmu", "...", "Aku sudah tenang, terima kasih", "Kapan ini mulai?", "Ketika aku masih SD, aku menatap ke kegelapan", "dan di sana aku melihat, kegelapan itu menatapiku" ], [ "Thank you, sorry for earlier", "It's okay, what happened to you?", "I was supposed to collect firewoods but I got lost and stuck here in the forest", "Are you afraid of the dark?", "Yes", "Try to relax your breathing whilst in the dark, it'll help calm you down", "...", "I've calmed now, thank you", "When did this start?", "Back when I'm still in grade school, I stared into the dark", "And there I saw, the abyss staring back at me" ] ]
dialogue_picture_resource = [ ExtResource( 16 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 7 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 7 ), ExtResource( 17 ), null ]
dialogue_command = "transition"

[node name="nokey-2" parent="tilemap_grassy_lands_decor/npc_patient3/dialogue_system" instance=ExtResource( 12 )]
dialogue_lines = [ [ "Bagaimana saya bisa mengatasi ini, dokter?", "Coba diam di tempat yang agak gelap", "dan gelapkan lagi setelah nyaman", "seharusnya ini bisa membantu sedikit", "Terima kasih banyak, dokter" ], [ "How can I cope with this doctor?", "Try staying in a slightly lit room", "and make it darker after you're comfortable with it", "this should help quite a bit", "Thank you very much, doctor" ] ]
dialogue_picture_resource = [ ExtResource( 17 ), ExtResource( 7 ), null, ExtResource( 14 ), ExtResource( 16 ) ]
dialogue_command = "next_level"

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.247059, 0.247059, 0.247059, 1 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="tilemap_grassy_lands_decor/npc_patient3" to="tilemap_grassy_lands_decor/npc_patient3" method="_on_npc_patient3_body_entered"]
[connection signal="body_exited" from="tilemap_grassy_lands_decor/npc_patient3" to="tilemap_grassy_lands_decor/npc_patient3" method="_on_npc_patient3_body_exited"]
